quarkus-demo-gitops/bootstrap/argo-cd/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app.kubernetes.io/component: server
    app.kubernetes.io/instance: argo-cd
    app.kubernetes.io/name: argocd-server
    app.kubernetes.io/part-of: argocd
  name: argocd-server
spec:
  # OpenShift Local
  # host: argocd-server-argocd.apps-crc.testing
  # ROSA - demo.redhat.com
  host: argocd-server-argocd.apps.rosa-mt5ck.13se.p1.openshiftapps.com
  to:
    kind: Service
    name: argocd-server
    weight: 100
  port:
    targetPort: https
  tls:
    termination: reencrypt
  wildcardPolicy: None
